# py-rename

./: .gitignore  README.md  pyproject.toml
pyrename/: file_utils.py  hasher.py  main.py
tests/: test_file_utils.py  test_hasher.py
